Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Sat Dec 1 2012 Thunor <thunorsif@hotmail.com>
- Added examples/miscellaneous/conditional_actions.

* Thu Nov 29 2012 Thunor <thunorsif@hotmail.com>
- Fixed bashisms within examples where possible, changed /bin/sh to
  /bin/bash where it wasn't.
- Fixed examples/edit/edit_attributes having duplicate variable names.
- Fixed examples/progressbar/progressbar_closewindow not closing.
- Fixed progressbar examples echoing data after pipe had closed.

* Wed Nov 28 2012 Thunor <thunorsif@hotmail.com>
- Changed <action type="function"> to <action function="type"> because
  that's what it should be which is especially obvious now that we have
  signal="type" and condition="type"; type="function" is now deprecated.
- Updated some examples to use the new <action function="type">.
- Removed "if " from conditions since we only need the conditions now.
- Updated the reference docs.

* Tue Nov 27 2012 Thunor <thunorsif@hotmail.com>
- Changed "if function(argument)" and "if ! function(argument)" to
  "if function_is_true(argument)" and "if function_is_false(argument)"
  because the not symbol will be interpreted as notting. Not only is it
  now clearer, it was easier to implement and it could be expanded upon.

* Mon Nov 26 2012 Thunor <thunorsif@hotmail.com>
- Moved the action conditions into their own tag attribute belonging to
  the action directive e.g. <action condition="if file(filename)">...
- Added support for:
  condition="if active(varname)",
  condition="if sensitive(varname)",
  condition="if visible(varname)" and it's trivial to add more.

* Sun Nov 25 2012 Thunor <thunorsif@hotmail.com>
- Updated the newly added code for parsing filenames and commands from
  the start of actions to be as robust as I can possibly make it.

* Sat Nov 24 2012 Thunor <thunorsif@hotmail.com>
- Added support for:
  <action>if file(filename) function:parameter</action>,