@@ -2,7 +2,7 @@
 
 GTKDIALOG=gtkdialog
 
-IMAGEFILE="$(find /usr/share/pixmaps -maxdepth 1 -type f | head -1)"
+IMAGEFILE="`find /usr/share/pixmaps -maxdepth 1 -type f | head -1`"
 
 MAIN_DIALOG='
 <window>
