@@ -16,38 +16,38 @@ MAIN_DIALOG='
 		<hbox homogeneous="true">
 			<vbox>
 				<text><label>"<button>"</label></text>
-				'"$(funcbtnCreate 0 false gtk-print)"'
-				'"$(funcbtnCreate 0 false gtk-orientation-landscape)"'
-				'"$(funcbtnCreate 0 false gtk-undelete)"'
-				'"$(funcbtnCreate 0 false gtk-select-color)"'
-				'"$(funcbtnCreate 0 false gtk-cut)"'
+				'"`funcbtnCreate 0 false gtk-print`"'
+				'"`funcbtnCreate 0 false gtk-orientation-landscape`"'
+				'"`funcbtnCreate 0 false gtk-undelete`"'
+				'"`funcbtnCreate 0 false gtk-select-color`"'
+				'"`funcbtnCreate 0 false gtk-cut`"'
 			</vbox>
 			<vbox>
 				<text><label>"<button homogeneous='"'true'"'>"</label></text>
-				'"$(funcbtnCreate 0 true gtk-print)"'
-				'"$(funcbtnCreate 0 true gtk-orientation-landscape)"'
-				'"$(funcbtnCreate 0 true gtk-undelete)"'
-				'"$(funcbtnCreate 0 true gtk-select-color)"'
-				'"$(funcbtnCreate 0 true gtk-cut)"'
+				'"`funcbtnCreate 0 true gtk-print`"'
+				'"`funcbtnCreate 0 true gtk-orientation-landscape`"'
+				'"`funcbtnCreate 0 true gtk-undelete`"'
+				'"`funcbtnCreate 0 true gtk-select-color`"'
+				'"`funcbtnCreate 0 true gtk-cut`"'
 			</vbox>
 		</hbox>
 		<hseparator></hseparator>
 		<hbox homogeneous="true">
 			<vbox>
 				<text><label>"<button image-position='"'1'"'>"</label></text>
-				'"$(funcbtnCreate 1 false gtk-print)"'
-				'"$(funcbtnCreate 1 false gtk-orientation-landscape)"'
-				'"$(funcbtnCreate 1 false gtk-undelete)"'
-				'"$(funcbtnCreate 1 false gtk-select-color)"'
-				'"$(funcbtnCreate 1 false gtk-cut)"'
+				'"`funcbtnCreate 1 false gtk-print`"'
+				'"`funcbtnCreate 1 false gtk-orientation-landscape`"'
+				'"`funcbtnCreate 1 false gtk-undelete`"'
+				'"`funcbtnCreate 1 false gtk-select-color`"'
+				'"`funcbtnCreate 1 false gtk-cut`"'
 			</vbox>
 			<vbox>
 				<text><label>"<button image-position='"'1'"' homogeneous='"'true'"'>"</label></text>
-				'"$(funcbtnCreate 1 true gtk-print)"'
-				'"$(funcbtnCreate 1 true gtk-orientation-landscape)"'
-				'"$(funcbtnCreate 1 true gtk-undelete)"'
-				'"$(funcbtnCreate 1 true gtk-select-color)"'
-				'"$(funcbtnCreate 1 true gtk-cut)"'
+				'"`funcbtnCreate 1 true gtk-print`"'
+				'"`funcbtnCreate 1 true gtk-orientation-landscape`"'
+				'"`funcbtnCreate 1 true gtk-undelete`"'
+				'"`funcbtnCreate 1 true gtk-select-color`"'
+				'"`funcbtnCreate 1 true gtk-cut`"'
 			</vbox>
 		</hbox>
 		<hseparator></hseparator>
